<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.register.RegisterActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_register_label"
        style="@style/login_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/register"
        android:textSize="@dimen/dimens_16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_name"
        style="@style/login_edit_text"
        android:layout_marginTop="80dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_email"
        style="@style/login_edit_text"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_mobile"
        style="@style/login_edit_text"
        android:layout_marginTop="20dp"
        android:digits="0123456789"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_pass"
        style="@style/login_edit_text"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mobile" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_conf_pass"
        style="@style/login_edit_text"
        android:layout_marginTop="24dp"
        android:hint="@string/conf_pass"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        style="@style/login_btn"
        android:layout_width="255dp"
        android:layout_marginBottom="52dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>